# geas

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.ko.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.geas/: rules.md
.geas/state/: events.jsonl  health-check.json  locks.json  run.json  session-latest.md
.github/workflows/: release.yml
.legacy/: README.ko.md
agents/: challenger.md  implementer.md  reviewer.md  verifier.md
agents/authority/: challenger.md  decision-maker.md  design-authority.md
agents/research/: literature-analyst.md  methodology-reviewer.md  research-analyst.md  research-engineer.md  research-integrity-reviewer.md  research-writer.md
cli/: build.ts  package-lock.json  package.json  tsconfig.json
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/icons/: icon.icns
dashboard/src-tauri/src/: config.rs  lib.rs  models.rs  watcher.rs
dashboard/src-tauri/src/commands/: mod.rs  tests.rs
docs/: AGENTS.ko.md  AGENTS.md  CHANGELOG.md  DIAGRAMS.md  GOVERNANCE.ko.md  GOVERNANCE.md  GUIDE.ko.md  GUIDE.md  HOOKS.ko.md  HOOKS.md  SKILLS.ko.md  SKILLS.md  agents.md  cli.md  definition.md  plugin-packaging.md  problem-and-goals.md  roadmap.md  runtime.md  skill-refactor-roadmap.md  skill-template.md  skills.md
hooks/: hooks.json
plugin/: .mcp.json  plugin.json
scripts/: install-codex.ps1  install-codex.sh
skills/: geas-cli.md
(+1166 files in other folders)
